# relaxed_ik_pp

./: .gitignore  Cargo.toml  Makefile  README.md  relaxed_ik_lib.pyi  time_bench_plot.py  xarm6_ex.py
configs/: default.toml  ur5.toml  ur5_grip.yaml  xarm6.toml  xarm6.yaml
configs/urdfs/: obstacles.urdf  ur5_grip.urdf  xarm6_grip.urdf  xarm6_robot.urdf
examples/: bench.rs  cost_viz.rs  metric.rs  plot_legend.rs  plot_metric.rs  reach.rs  time_bench.rs
examples/cost_configs/: example.toml  groove.yaml  swamp.yaml  swamp_groove.yaml
src/: errors.rs  lib.rs  python_wrapper.rs  relaxed_ik.rs  relaxed_ik_web.rs  relaxed_ik_wrapper.rs
src/groove/: gradient.rs  groove.rs  loss.rs  mod.rs  objective.rs  objective_master.rs  vars.rs
src/motion/: planner.rs
src/spacetime/: arm.rs  mod.rs  robot.rs
src/utils/: config_parser.rs  mod.rs  transformations.rs
src/utils_rust/: mod.rs
