[package]
name = "guilhem_relaxed_ik_core"
version = "0.1.0"
authors = ["Guilhem <dguilhem.mathieux.pro@gmail.com>"]
edition = "2021"
# Forked from : https://github.com/uwgraphics/relaxed_ik_core.git
# name = "relaxed_ik_core"
# version = "0.1.0"
# authors = ["djrakita <djrakita@gmail.com>", "yepw <yepingw@outlook.com>"]
# edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Computations - Robotics 
k = "0.31"
nalgebra = { version = "0.30", features = ["serde-serialize"] }
ncollide3d = "0.33"
openrr-planner = { git = "https://github.com/openrr/openrr.git" }
optimization_engine = "0.9"
parry3d-f64 = "0.8"
urdf-rs = "0.8"

# Other
env_logger = "0.11"
log = "0.4"
pyo3 = { version = "0.22", optional = true, features = [
    "abi3-py310",
    "extension-module",
] }
pyo3-log = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1"
savefile = "0.17"
savefile-derive = "0.17"

[dev-dependencies]
clap = { version = "4.5.13", features = ["derive"] }
indicatif = "0.17"
plotters = "0.3"
image = "0.24"
base64 = "0.21"
scarlet = "1.2"
urdf-viz = "0.45"
svg2pdf= "0.12"

[lib]
name = "relaxed_ik_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[profile]
dev.opt-level = 3
release.opt-level = 3

[features]
# only adds pyo3 when python_wrap feature enabled
python_wrap = ["dep:pyo3", "dep:pyo3-log"]
